--- a/src/app/(auth)/login/page.module.scss
+++ b/src/app/(auth)/login/page.module.scss
@@ -2,11 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   padding: 2rem;
   position: relative;
   overflow: hidden;
   background-color: var(--background-color);
-  //   min-height: 100vh;
+  height: 100%;
 }
 
 .header {
