--- a/src/app/(auth)/signup/page.module.scss
+++ b/src/app/(auth)/signup/page.module.scss
@@ -1,6 +1,8 @@
 .container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  height: 100%;
   align-items: center;
   padding: 2rem;
   position: relative;
