--- a/src/components/commons/Header.module.scss
+++ b/src/components/commons/Header.module.scss
@@ -12,6 +12,11 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   z-index: 1000;
 
+  .logo {
+    background-color: #f9debf;
+    border-radius: 50%;
+  }
+
   .authButtons {
     display: flex;
     gap: 1rem;
